--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+.app {
+  padding: 50px;
+}
+
+.form-container {
   text-align: center;
+  margin: auto;
+  width: fit-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-box {
+  line-height: 1.2rem;
+  outline: none;
+  color: grey;
+  border-radius: 5px;
+  padding: 20px;
+  border: none;
+  resize: none;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.reply-text-box {
+  outline: none;
+  color: grey;
+  border-radius: 5px;
+  padding: 10px;
+  border: none;
+  resize: none;
+  width: 80%;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  font-size: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post-btn-container {
+  text-align: right;
+  padding: 10px 0px;
+}
+
+.reply-btn-container {
+  padding: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.post-btn {
+  background-color: #1DA1F2;
+  padding: 8px 30px;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comments-container {
+  border-radius: 5px;
+  padding: 20px;
+  width: 50%;
+  margin: 50px auto;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+}
+
+.comment {
+  margin-left: 20px;
+  padding: 10px;
+  border-left: 1px solid rgb(196, 186, 186);
+}
+
+.comment div h5 {
+  margin: 0;
+  padding: 10px;
+}
+
+.comment div p {
+  margin: 0;
+  padding: 0 10px;
+  font-size: 12px;
+}
+
+.reply {
+  background: transparent;
+  border: none;
+  color: #1DA1F2;
+  font-weight: 700;
 }
